<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/high_scores_btn"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game_btn"
            android:layout_marginLeft="15dp"
            android:text="@string/high_scores" />

        <Button
            android:id="@+id/manual_btn"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/high_scores_btn"
            android:text="@string/manual"/>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/manual_btn"
            android:text="@string/exit"/>


    </RelativeLayout>

</FrameLayout>