<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="408dp"
        android:layout_height="600dp"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/number_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/rank_1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/rank_2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/number_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/rank_3"
            android:textSize="18sp" />
    </RelativeLayout>

</FrameLayout>